// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API surface > exports of "." are stable 1`] = `
[
  "AGENTIC_BASE_URL",
  "AUTHORIZE_ENDPOINT",
  "AUTH_AUTHORITY",
  "AUTH_SCOPES",
  "AVAILABLE_ACTIONS",
  "ActionResult",
  "ActionStep",
  "Agent",
  "AgenticApprovalResumeData",
  "AgenticAskUserQuestionResumeData",
  "AgenticCallOptions",
  "AgenticHeaderOptions",
  "AgenticRequestBody",
  "AgenticResumeData",
  "AgenticSseFrame",
  "AgenticUIMessage",
  "AgentsResponse",
  "AnalyticsAdapter",
  "AnalyticsErrorContext",
  "AnalyticsEventMap",
  "AnalyticsEventName",
  "AnalyticsEventProps",
  "AnalyticsIdentity",
  "ApiResponse",
  "ApprovalContext",
  "ApprovalResolver",
  "ApprovalResult",
  "AttachmentUploadResult",
  "AuthContext",
  "AuthMode",
  "BBApiError",
  "Bot",
  "BotDetail",
  "BrowserLoginResult",
  "BrowserRedirectOptions",
  "CapabilitiesResponse",
  "Capability",
  "ConversationDetail",
  "ConversationWebSearchSettings",
  "CreateNoteParams",
  "DEFAULTS",
  "GetMessageListOptions",
  "IdentityAdapter",
  "IntrospectResponse",
  "ListTenantsOptions",
  "ListTenantsResponse",
  "LoginOptions",
  "LoginResult",
  "MarkdownOptions",
  "MessageItem",
  "MessageListBody",
  "MessageStream",
  "NoteResult",
  "OAUTH_BACKEND_URL",
  "OAuthTokens",
  "ParsedResponse",
  "Profile",
  "SendMessageOptions",
  "SendMessageStreamOptions",
  "Settings",
  "StorageAdapter",
  "SuspendContext",
  "SuspendResult",
  "TOKEN_ENDPOINT",
  "TenantConfig",
  "TenantDetail",
  "TenantSummary",
  "TextDeltaFrame",
  "Theme",
  "ThemeMode",
  "TokenResult",
  "ToolCallApprovalFrame",
  "ToolCallSuspendedFrame",
  "UpdateConversationPatch",
  "UploadAttachmentOptions",
  "WebSearchConfig",
  "WebSearchProvider",
  "WebSearchProviderStatus",
  "WebSearchType",
  "agenticHeaders",
  "authHeaders",
  "autoApproveResolver",
  "beginBrowserLogin",
  "buildAgenticStreamUrl",
  "callAgenticStream",
  "captureError",
  "collectTextFromStream",
  "completeBrowserLogin",
  "computeExpiration",
  "createConversation",
  "createLock",
  "createMessageStream",
  "createNote",
  "createRefreshGuard",
  "decodeJwtPayload",
  "decodePKCEState",
  "deleteConversation",
  "denyAllResolver",
  "discoverFrontendUrls",
  "encodePKCEState",
  "exchangeCode",
  "extractCode",
  "extractJson",
  "extractOrgIdFromClaims",
  "extractOrgIdFromIntrospect",
  "extractProfile",
  "fetchAgents",
  "fetchBotDetail",
  "fetchBotList",
  "fetchCapabilities",
  "flushAnalytics",
  "generateChallenge",
  "generateStateNonce",
  "generateVerifier",
  "getAnalyticsAdapter",
  "getAuthContext",
  "getAvailableWebSearchProviders",
  "getConversationAttachments",
  "getConversationDetail",
  "getConversationWebSearch",
  "getMessageList",
  "getTenantById",
  "getTenantConfig",
  "hasUsableAuth",
  "identifyUser",
  "inferAuthMode",
  "introspectApiKey",
  "invalidateConvoDetailCache",
  "isBBApiError",
  "isTextDeltaFrame",
  "isTokenExpired",
  "isToolCallApprovalFrame",
  "isToolCallSuspendedFrame",
  "listTenants",
  "login",
  "markdownToHtml",
  "nextThemeMode",
  "normalizeUrl",
  "parseAgenticStream",
  "parseResponse",
  "parseSseDataLine",
  "refreshTokens",
  "renderMarkdown",
  "renderMarkdownInto",
  "repairUnescapedQuotes",
  "resetAnalyticsAdapter",
  "runActions",
  "sendMessage",
  "setAgentActive",
  "setAgentAvailability",
  "setAnalyticsAdapter",
  "setAnalyticsGroup",
  "setCapabilityActive",
  "setCapabilityAvailability",
  "setConversationWebSearch",
  "setCustomAgentsEnabled",
  "subFromAccessToken",
  "timeAgo",
  "trackApiError",
  "trackEvent",
  "transcribeAudio",
  "updateConversation",
  "uploadConversationAttachment",
  "useTheme",
  "wrapStringAsStream",
]
`;

exports[`public API surface > exports of "./actions" are stable 1`] = `
[
  "AVAILABLE_ACTIONS",
  "ActionResult",
  "ActionStep",
  "runActions",
]
`;

exports[`public API surface > exports of "./adapters" are stable 1`] = `
[
  "AnalyticsAdapter",
  "AnalyticsErrorContext",
  "AnalyticsEventMap",
  "AnalyticsEventName",
  "AnalyticsEventProps",
  "AnalyticsIdentity",
  "IdentityAdapter",
  "StorageAdapter",
]
`;

exports[`public API surface > exports of "./agentic" are stable 1`] = `
[
  "AgenticApprovalResumeData",
  "AgenticAskUserQuestionResumeData",
  "AgenticCallOptions",
  "AgenticHeaderOptions",
  "AgenticRequestBody",
  "AgenticResumeData",
  "AgenticSseFrame",
  "AgenticUIMessage",
  "ApprovalContext",
  "ApprovalResolver",
  "ApprovalResult",
  "SuspendContext",
  "SuspendResult",
  "TextDeltaFrame",
  "ToolCallApprovalFrame",
  "ToolCallSuspendedFrame",
  "agenticHeaders",
  "autoApproveResolver",
  "buildAgenticStreamUrl",
  "callAgenticStream",
  "collectTextFromStream",
  "denyAllResolver",
  "isTextDeltaFrame",
  "isToolCallApprovalFrame",
  "isToolCallSuspendedFrame",
  "parseAgenticStream",
  "parseSseDataLine",
]
`;

exports[`public API surface > exports of "./analytics" are stable 1`] = `
[
  "AnalyticsAdapter",
  "AnalyticsErrorContext",
  "AnalyticsEventMap",
  "AnalyticsEventName",
  "AnalyticsEventProps",
  "AnalyticsIdentity",
  "captureError",
  "flushAnalytics",
  "getAnalyticsAdapter",
  "identifyUser",
  "resetAnalyticsAdapter",
  "setAnalyticsAdapter",
  "setAnalyticsGroup",
  "trackApiError",
  "trackEvent",
]
`;

exports[`public API surface > exports of "./analytics/mixpanel" are stable 1`] = `
[
  "MixpanelAdapterConfig",
  "MixpanelClient",
  "MixpanelSuperProps",
  "createMixpanelAdapter",
]
`;

exports[`public API surface > exports of "./api" are stable 1`] = `
[
  "Agent",
  "AgenticApprovalResumeData",
  "AgenticAskUserQuestionResumeData",
  "AgenticCallOptions",
  "AgenticHeaderOptions",
  "AgenticRequestBody",
  "AgenticResumeData",
  "AgenticSseFrame",
  "AgenticUIMessage",
  "AgentsResponse",
  "ApiResponse",
  "ApprovalContext",
  "ApprovalResolver",
  "ApprovalResult",
  "AttachmentUploadResult",
  "BBApiError",
  "Bot",
  "BotDetail",
  "CapabilitiesResponse",
  "Capability",
  "ConversationDetail",
  "ConversationWebSearchSettings",
  "CreateNoteParams",
  "GetMessageListOptions",
  "IntrospectResponse",
  "ListTenantsOptions",
  "ListTenantsResponse",
  "MessageItem",
  "MessageListBody",
  "MessageStream",
  "NoteResult",
  "SendMessageOptions",
  "SendMessageStreamOptions",
  "SuspendContext",
  "SuspendResult",
  "TenantConfig",
  "TenantDetail",
  "TenantSummary",
  "TextDeltaFrame",
  "ToolCallApprovalFrame",
  "ToolCallSuspendedFrame",
  "UpdateConversationPatch",
  "UploadAttachmentOptions",
  "WebSearchConfig",
  "WebSearchProvider",
  "WebSearchProviderStatus",
  "WebSearchType",
  "agenticHeaders",
  "authHeaders",
  "autoApproveResolver",
  "buildAgenticStreamUrl",
  "callAgenticStream",
  "collectTextFromStream",
  "createConversation",
  "createMessageStream",
  "createNote",
  "deleteConversation",
  "denyAllResolver",
  "discoverFrontendUrls",
  "extractOrgIdFromIntrospect",
  "fetchAgents",
  "fetchBotDetail",
  "fetchBotList",
  "fetchCapabilities",
  "getAvailableWebSearchProviders",
  "getConversationAttachments",
  "getConversationDetail",
  "getConversationWebSearch",
  "getMessageList",
  "getTenantById",
  "getTenantConfig",
  "introspectApiKey",
  "invalidateConvoDetailCache",
  "isBBApiError",
  "isTextDeltaFrame",
  "isToolCallApprovalFrame",
  "isToolCallSuspendedFrame",
  "listTenants",
  "normalizeUrl",
  "parseAgenticStream",
  "parseSseDataLine",
  "sendMessage",
  "setAgentActive",
  "setAgentAvailability",
  "setCapabilityActive",
  "setCapabilityAvailability",
  "setConversationWebSearch",
  "setCustomAgentsEnabled",
  "transcribeAudio",
  "updateConversation",
  "uploadConversationAttachment",
  "wrapStringAsStream",
]
`;

exports[`public API surface > exports of "./auth" are stable 1`] = `
[
  "BrowserLoginResult",
  "BrowserRedirectOptions",
  "LoginOptions",
  "LoginResult",
  "Profile",
  "TokenResult",
  "beginBrowserLogin",
  "completeBrowserLogin",
  "computeExpiration",
  "createRefreshGuard",
  "decodeJwtPayload",
  "decodePKCEState",
  "encodePKCEState",
  "exchangeCode",
  "extractOrgIdFromClaims",
  "extractProfile",
  "generateChallenge",
  "generateStateNonce",
  "generateVerifier",
  "isTokenExpired",
  "login",
  "refreshTokens",
]
`;

exports[`public API surface > exports of "./config" are stable 1`] = `
[
  "AGENTIC_BASE_URL",
  "AUTHORIZE_ENDPOINT",
  "AUTH_AUTHORITY",
  "AUTH_SCOPES",
  "OAUTH_BACKEND_URL",
  "TOKEN_ENDPOINT",
]
`;

exports[`public API surface > exports of "./prompt" are stable 1`] = `
[
  "ParsedResponse",
  "parseResponse",
]
`;

exports[`public API surface > exports of "./react" are stable 1`] = `
[
  "BBClientProvider",
  "BBClientProviderProps",
  "BBKeys",
  "CreateBBQueryClientOptions",
  "UseChatStreamArgs",
  "UseChatStreamResult",
  "agentsQueryOptions",
  "bbKeys",
  "bbShouldRetryQuery",
  "botDetailQueryOptions",
  "botsQueryOptions",
  "capabilitiesQueryOptions",
  "conversationDetailQueryOptions",
  "createBBQueryClient",
  "messagesInfiniteOptions",
  "tenantConfigQueryOptions",
  "useAgents",
  "useBBContext",
  "useBotDetail",
  "useBots",
  "useCapabilities",
  "useChatStream",
  "useConversationAttachments",
  "useConversationDetail",
  "useConversationWebSearch",
  "useCreateConversation",
  "useCreateNote",
  "useDeleteConversation",
  "useMessages",
  "useSetAgentActive",
  "useSetAgentAvailability",
  "useSetCapabilityActive",
  "useSetCapabilityAvailability",
  "useSetCustomAgentsEnabled",
  "useTenantConfig",
  "useUpdateConversation",
  "useWebSearchProviders",
]
`;

exports[`public API surface > exports of "./settings" are stable 1`] = `
[
  "AuthContext",
  "AuthMode",
  "DEFAULTS",
  "OAuthTokens",
  "Settings",
  "getAuthContext",
  "hasUsableAuth",
  "inferAuthMode",
]
`;

exports[`public API surface > exports of "./ui" are stable 1`] = `
[
  "MarkdownOptions",
  "Theme",
  "ThemeMode",
  "markdownToHtml",
  "nextThemeMode",
  "renderMarkdown",
  "renderMarkdownInto",
  "timeAgo",
  "useTheme",
]
`;

exports[`public API surface > exports of "./utils" are stable 1`] = `
[
  "createLock",
  "extractCode",
  "extractJson",
  "repairUnescapedQuotes",
  "subFromAccessToken",
]
`;
